fix provisioning error by using Arrays.asList instead of List.of